5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/3094/executions/1885_3210.log
== TEST (2019-07-09 10:38:26) 
-- CODE:
from numpy import *

la = array(eval(input("alunos: ")))split(",").
n = 0

while n < la:
	n = float(input("n: "))
	n=n+1
	print(n)
-- ERROR:
File "XXXX", line 3
    la = array(eval(input()))split(",").
                                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 10:38:43) 
-- CODE:
from numpy import *

la = array(eval(input("alunos: ")))split().
n = 0

while n < la:
	n = float(input("n: "))
	n=n+1
	print(n)
-- ERROR:
File "XXXX", line 3
    la = array(eval(input()))split().
                                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 10:39:02) 
-- CODE:
from numpy import *

la = array(eval(input("alunos: ")))split(,).
n = 0

while n < la:
	n = float(input("n: "))
	n=n+1
	print(n)
-- ERROR:
File "XXXX", line 3
    la = array(eval(input()))split(,).
                                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 10:39:08) 
-- CODE:
from numpy import *

la = array(eval(input("alunos: ")))split().
n = 0

while n < la:
	n = float(input("n: "))
	n=n+1
	print(n)
-- ERROR:
File "XXXX", line 3
    la = array(eval(input()))split().
                                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:29:27) 
-- CODE:
from numpy import *

la = array(eval(input("alunos: ")))

for i in la:
	i=float(input("notas:")
			  
print("O aluno que possui a maior nota e o aluno ", max(la))
-- ERROR:
File "XXXX", line 8
    print("O aluno que possui a maior nota e o aluno ", max(la))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:29:39) 
-- CODE:
from numpy import *

la = array(eval(input("alunos: ")))

for i in la:
	i=float(input("notas:")
			  
	print("O aluno que possui a maior nota e o aluno ", max(la))
-- ERROR:
File "XXXX", line 8
    print("O aluno que possui a maior nota e o aluno ", max(la))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:29:51) 
-- CODE:
from numpy import *

la = array(eval(input("alunos: ")))

for i in la:
	i=float(input("notas:")
			  
	print("O aluno que possui a maior nota e o aluno " max(la))
-- ERROR:
File "XXXX", line 8
    print("O aluno que possui a maior nota e o aluno " max(la))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:30:23) 
-- CODE:
from numpy import *

la = array(eval(input("alunos: ")))

for i in la:
	i[]=float(input("notas:")
			  
	print("O aluno que possui a maior nota e o aluno " max(la))
-- ERROR:
File "XXXX", line 6
    i[]=float(input()
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:32:11) 
-- CODE:
from numpy import *

la = array(eval(input("alunos: ")))

for i in la:
	i=float(input("notas:")
	x = dot(inv(la)*i.T)		  
	
			  
			  
			  
print("O aluno que possui a maior nota e o aluno " max(x))
-- ERROR:
File "XXXX", line 7
    x = dot(inv(la)*i.T)		  
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:32:26) 
-- CODE:
from numpy import *

la = array(eval(input("alunos: ")))

for i in la:
	i=float(input("notas:")
	x = dot((la)*i.T)		  
	
			  
			  
			  
print("O aluno que possui a maior nota e o aluno " max(x))
-- ERROR:
File "XXXX", line 7
    x = dot((la)*i.T)		  
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:33:16) 
-- CODE:
from numpy import *

la = array(eval(input("alunos: ")))

for i in la:
	i=float(input("notas:")

			  
x = dot(la*i.T)		  
	
			  
			  
			  
print("O aluno que possui a maior nota e o aluno " max(x))
-- ERROR:
File "XXXX", line 9
    x = dot(la*i.T)		  
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:33:30) 
-- CODE:
from numpy import *

la = array(eval(input("alunos: ")))

for i in la:
	i=float(input("notas:")

	x = dot(la*i.T)		  
	
			  
			  
	print("O aluno que possui a maior nota e o aluno " max(x))
-- ERROR:
File "XXXX", line 8
    x = dot(la*i.T)		  
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:33:35) 
-- CODE:
from numpy import *

la = array(eval(input("alunos: ")))

for i in la:
	i=float(input("notas:")

	x = dot(la*i.T)		  
	
			  
			  
print("O aluno que possui a maior nota e o aluno " max(x))
-- ERROR:
File "XXXX", line 8
    x = dot(la*i.T)		  
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:37:15) 
-- CODE:
from numpy import *

la = array(eval(input("alunos: ")))
print(la)
#for i in la:
#	i=float(input("notas:")

#	x = dot(la*i.T)		  
	
			  
			  
#print("O aluno que possui a maior nota e o aluno " max(x))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:39:29) 
-- CODE:
from numpy import *

la = array(eval(input("alunos: ")))
#print(la)
for i in range(size(la):
	v=float(input("notas:")

	x = dot(la*v.T)		  
	
			  
			  
print("O aluno que possui a maior nota e o aluno " max(x))
-- ERROR:
File "XXXX", line 5
    for i in range(size(la):
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:39:40) 
-- CODE:
from numpy import *

la = array(eval(input("alunos: ")))
#print(la)
for i in range(size(la)):
	v=float(input("notas:")

	x = dot(la*v.T)		  
	
			  
			  
print("O aluno que possui a maior nota e o aluno " max(x))
-- ERROR:
File "XXXX", line 8
    x = dot(la*v.T)		  
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:39:55) 
-- CODE:
from numpy import *

la = array(eval(input("alunos: ")))
#print(la)
for i in range(size(la)):
	v=float(input("notas:")

	x = dot(la,v.T)		  
	
			  
			  
print("O aluno que possui a maior nota e o aluno " max(x))
-- ERROR:
File "XXXX", line 8
    x = dot(la,v.T)		  
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:40:21) 
-- CODE:
from numpy import *

la = array(eval(input("alunos: ")))
#print(la)
for i in range(size(la)):
	v=float(input("notas:")

	x = dot(la,v.T)		  
	
			  
			  
	print("O aluno que possui a maior nota e o aluno " max(x))
-- ERROR:
File "XXXX", line 8
    x = dot(la,v.T)		  
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:40:27) 
-- CODE:
from numpy import *

la = array(eval(input("alunos: ")))
#print(la)
for i in range(size(la)):
	v=float(input("notas:")

	#x = dot(la,v.T)		  
	
			  
			  
	print("O aluno que possui a maior nota e o aluno " max(x))
-- ERROR:
File "XXXX", line 12
    print("O aluno que possui a maior nota e o aluno " max(x))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:40:39) 
-- CODE:
from numpy import *

la = array(eval(input("alunos: ")))
#print(la)
for i in range(size(la)):
	v=float(input("notas:")

	#x = dot(la,v.T)		  
	
			  
			  
	print("O aluno que possui a maior nota e o aluno " max(x))
-- ERROR:
File "XXXX", line 12
    print("O aluno que possui a maior nota e o aluno " max(x))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:40:41) 
-- CODE:
from numpy import *

la = array(eval(input("alunos: ")))
#print(la)
for i in range(size(la)):
	v=float(input("notas:")

	#x = dot(la,v.T)		  
	
			  
			  
	print("O aluno que possui a maior nota e o aluno ", max(x))
-- ERROR:
File "XXXX", line 12
    print("O aluno que possui a maior nota e o aluno ", max(x))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:40:49) 
-- CODE:
from numpy import *

la = array(eval(input("alunos: ")))
#print(la)
for i in range(size(la)):
	v=float(input("notas:")

	#x = dot(la,v.T)		  
	
			  
			  
print("O aluno que possui a maior nota e o aluno ", max(x))
-- ERROR:
File "XXXX", line 12
    print("O aluno que possui a maior nota e o aluno ", max(x))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:41:13) 
-- CODE:
from numpy import *

la = array(eval(input("alunos: ")))
#print(la)
for i in range(size(la)):
	v=float(input("notas:")

	x=dot(la,v.T)		  
	
	print("O aluno que possui a maior nota e o aluno ", max(x))
-- ERROR:
File "XXXX", line 8
    x=dot(la,v.T)		  
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:44:57) 
-- CODE:
from numpy import *

la = array(eval(input("alunos: ")))
#print(la)
for i in range(size(la)):
	v=float(input("notas:")
	if [i]==max(v):
		n = [i]
			  
	
	print("O aluno que possui a maior nota e o aluno ", [i] )
-- ERROR:
File "XXXX", line 7
    if [i]==max(v):
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:45:30) 
-- CODE:
from numpy import *

la = array(eval(input("alunos: ")))
#print(la)
for i in range(size(la)):
	v=float(input("notas:")
	if v[i]==max(v):
		n = [i]
			  
	
	print("O aluno que possui a maior nota e o aluno ", [i] )
-- ERROR:
File "XXXX", line 7
    if v[i]==max(v):
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:45:49) 
-- CODE:
from numpy import *

la = array(eval(input("alunos: ")))
#print(la)
for i in range(size(la)):
	v=float(input("notas:")
	if v[i]==max:
		n = [i]
			  
	
	print("O aluno que possui a maior nota e o aluno ", [i] )
-- ERROR:
File "XXXX", line 7
    if v[i]==max:
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:45:54) 
-- CODE:
from numpy import *

la = array(eval(input("alunos: ")))
#print(la)
for i in range(size(la)):
	v=float(input("notas:")
	if v[i]== max:
		n = [i]
			  
	
	print("O aluno que possui a maior nota e o aluno ", [i] )
-- ERROR:
File "XXXX", line 7
    if v[i]== max:
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:46:00) 
-- CODE:
from numpy import *

la = array(eval(input("alunos: ")))
#print(la)
for i in range(size(la)):
	v=float(input("notas:")
	if v[i]== max :
		n = [i]
			  
	
	print("O aluno que possui a maior nota e o aluno ", [i] )
-- ERROR:
File "XXXX", line 7
    if v[i]== max :
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:46:21) 
-- CODE:
from numpy import *

la = array(eval(input("alunos: ")))
#print(la)
for i in range(size(la)):
	v=float(input("notas:")
	if (v[i]== max):
		n = [i]
			  
	
	print("O aluno que possui a maior nota e o aluno ", [i] )
-- ERROR:
File "XXXX", line 7
    if (v[i]== max):
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:47:04) 
-- CODE:
from numpy import *

la = array(eval(input("alunos: ")))
#print(la)
for i in range(size(la)):
	v=float(input("notas:")
		if (v[i]== max):
		n = [i]
			  
	
	print("O aluno que possui a maior nota e o aluno ", [i] )
-- ERROR:
File "XXXX", line 7
    if (v[i]== max):
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:47:17) 
-- CODE:
from numpy import *

la = array(eval(input("alunos: ")))
#print(la)
for i in range(size(la)):
	v=float(input("notas:")
	if (v[i]== max):
		n = [i]
			  
	
	print("O aluno que possui a maior nota e o aluno ", [i] )
-- ERROR:
File "XXXX", line 7
    if (v[i]== max):
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:47:24) 
-- CODE:
from numpy import *

la = array(eval(input("alunos: ")))
#print(la)
for i in range(size(la)):
	v=float(input("notas:")
	if (v[i]== max):
	n = [i]
			  
	
	print("O aluno que possui a maior nota e o aluno ", [i] )
-- ERROR:
File "XXXX", line 7
    if (v[i]== max):
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:50:00) 
-- CODE:
from numpy import *

la = array(eval(input("alunos: ")))
print(la)
for i in range(size(la)):
	v=float(input("notas:")
	#if (v[i]== max):
	#	n = [i]
			  
	print(v)
	#print("O aluno que possui a maior nota e o aluno ", [i] )
-- ERROR:
File "XXXX", line 10
    print(v)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:50:11) 
-- CODE:
from numpy import *

la = array(eval(input("alunos: ")))
print(la)
for i in range(size(la)):
	v=float(input("notas:")
	#if (v[i]== max):
	#	n = [i]
			  
print(v)
	#print("O aluno que possui a maior nota e o aluno ", [i] )
-- ERROR:
File "XXXX", line 10
    print(v)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:50:19) 
-- CODE:
from numpy import *

la = array(eval(input("alunos: ")))
print(la)
for i in range(size(la)):
	v=float(input("notas:")
	#if (v[i]== max):
	#	n = [i]
			  
print(v)
	#print("O aluno que possui a maior nota e o aluno ", [i] )
-- ERROR:
File "XXXX", line 10
    print(v)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:50:37) 
-- CODE:
from numpy import *

la = array(eval(input("alunos: ")))
print(la)
for i in range(size(la)):
	v=float(input("notas:")
	#if (v[i]== max):
	#	n = [i]
			  
print(v)
	#print("O aluno que possui a maior nota e o aluno ", [i] )
-- ERROR:
File "XXXX", line 10
    print(v)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:50:50) 
-- CODE:
from numpy import *

la = array(eval(input("alunos: ")))
print(la)
for i in range(size(la)):
	v=float(input("notas:"))
	#if (v[i]== max):
	#	n = [i]
			  
print(v)
	#print("O aluno que possui a maior nota e o aluno ", [i] )
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:51:55) 
-- CODE:
from numpy import *

la = array(eval(input("alunos: ")))
print(la)
for i in range(size(la)):
	v=float(input("notas:"))
	#if (v[i]== max):
	#	n = [i]
			  
print(max(v))
	#print("O aluno que possui a maior nota e o aluno ", [i] )
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:52:58) 
-- CODE:
from numpy import *

la = array(eval(input("alunos: ")))
print(la)
for i in range(size(la)):
	v=float(input("notas:"))
	#if (v[i]== max):
	#	n = [i]
			  
print(max(v[i]))
	#print("O aluno que possui a maior nota e o aluno ", [i] )
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-09 11:54:37) 
-- CODE:
from numpy import *

la = array(eval(input("alunos: ")))
print(la)
for i in range(size(la)):
	v=float(input("notas:"))
	#if (v[i]== max):
	#	n = [i]
			  
print(max(v[i]))
	#print("O aluno que possui a maior nota e o aluno ", [i] )
-- EXECUTION TIME:
1.0443
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1885/3210/main.py", line 10, in <module>
    print(max(v[i]))
TypeError: 'float' object is not subscriptable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
